environments/istio/basic-demo/clusterservices-config/base/active/argocd-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/https-gateway
  http:
  - name: argo-ui
    match:
    - uri:
        prefix: /argo
    route:
    - destination:
        host: argocd-server
        port:
          number: 443
