environments/istio/basic-demo/clusterservices-config/base/active/grafana-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
  - "grafana-local.glootest.com"
  gateways:
  - istio-system/https-gateway
  http:
  - route:
    - destination:
        host: grafana
        port:
          number: 3000
