environments/istio/basic-demo/clusterservices-config/base/active/jaeger-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
  namespace: istio-system
spec:
  hosts:
  - "jaeger-local.glootest.com"
  gateways:
  - istio-system/https-gateway
  http:
  - route:
    - destination:
        host: tracing
        port:
          number: 80
