environments/istio/basic-demo/clusterservices-config/base/active/kiali-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/https-gateway
  http:
  - name: kiali-ui
    match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        host: kiali
        port:
          number: 20001
