environments/istio/basic-demo/clusterservices-config/base/active/prometheus-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts:
  - "prometheus-local.glootest.com"
  gateways:
  - istio-system/https-gateway
  http:
  - route:
    - destination:
        host: prometheus
        port:
          number: 9090
